fixes all over the place and some rewriting in the experimental section.

--- a/paper/cstlm.tex
+++ b/paper/cstlm.tex
@@ -51,31 +51,10 @@
 \input{sec-experiments.tex}
 
 
-
-
-
-
-
-
-%\section{Related Work}
-%\cite{brants2007large}
-%\cite{guthrie2010storing}
-%\cite{brants2006web}
-%\cite{stolcke2011srilm}
-%\cite{stolcke2002srilm}
-%\cite{pauls2011faster}
-%\cite{heafield2011kenlm}
-%\cite{kennington2012suffix}
-%\cite{wood2011sequence}
-%\cite{chen1996empirical}
-%\cite{kneser1995improved}
-%\cite{chen1996empirical}
-%\cite{navarro2007compressed}
-%\cite{gog2014theory}
-
 \section{Conclusions}
 
-% include your own bib file like this:
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+\newpage
 \bibliographystyle{acl}
 \bibliography{local}
 
