--- a/paper/figures/fig-wiki-breakdown.tex
+++ b/paper/figures/fig-wiki-breakdown.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.8.1 on 2015-05-30 14:04:54
+% Created by tikzDevice version 0.8.1 on 2015-05-30 20:10:24
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor{fillColor}{RGB}{255,255,255}
@@ -16,26 +16,29 @@
 \path[draw=drawColor,line width= 1.5pt,line join=round,line cap=round] ( 33.00, 86.71) rectangle (206.10,141.69);
 \definecolor{drawColor}{gray}{0.90}
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 33.00, 97.69) --
-	(206.10, 97.69);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 33.00, 96.11) --
+	(206.10, 96.11);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 33.00,114.64) --
-	(206.10,114.64);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 33.00,109.91) --
+	(206.10,109.91);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 33.00,131.60) --
-	(206.10,131.60);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 33.00,123.71) --
+	(206.10,123.71);
+
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 33.00,137.50) --
+	(206.10,137.50);
 
 \path[draw=drawColor,line width= 0.8pt,line join=round] ( 33.00, 89.21) --
 	(206.10, 89.21);
 
-\path[draw=drawColor,line width= 0.8pt,line join=round] ( 33.00,106.16) --
-	(206.10,106.16);
+\path[draw=drawColor,line width= 0.8pt,line join=round] ( 33.00,103.01) --
+	(206.10,103.01);
 
-\path[draw=drawColor,line width= 0.8pt,line join=round] ( 33.00,123.12) --
-	(206.10,123.12);
+\path[draw=drawColor,line width= 0.8pt,line join=round] ( 33.00,116.81) --
+	(206.10,116.81);
 
-\path[draw=drawColor,line width= 0.8pt,line join=round] ( 33.00,140.08) --
-	(206.10,140.08);
+\path[draw=drawColor,line width= 0.8pt,line join=round] ( 33.00,130.61) --
+	(206.10,130.61);
 
 \path[draw=drawColor,line width= 0.8pt,line join=round] ( 45.67, 86.71) --
 	( 45.67,141.69);
@@ -65,105 +68,120 @@
 \path[fill=fillColor] ( 36.17, 89.21) rectangle ( 55.17, 89.21);
 \definecolor{fillColor}{RGB}{55,126,184}
 
-\path[fill=fillColor] ( 36.17, 89.21) rectangle ( 55.17, 89.55);
+\path[fill=fillColor] ( 36.17, 89.21) rectangle ( 55.17, 89.48);
 \definecolor{fillColor}{RGB}{77,175,74}
 
-\path[fill=fillColor] ( 36.17, 89.55) rectangle ( 55.17, 89.55);
+\path[fill=fillColor] ( 36.17, 89.48) rectangle ( 55.17, 89.49);
 \definecolor{fillColor}{RGB}{152,78,163}
 
-\path[fill=fillColor] ( 36.17, 89.55) rectangle ( 55.17, 89.57);
+\path[fill=fillColor] ( 36.17, 89.49) rectangle ( 55.17, 89.50);
 \definecolor{fillColor}{RGB}{255,127,0}
 
-\path[fill=fillColor] ( 36.17, 89.57) rectangle ( 55.17, 89.58);
+\path[fill=fillColor] ( 36.17, 89.50) rectangle ( 55.17, 89.51);
 \definecolor{fillColor}{RGB}{228,26,28}
 
-\path[fill=fillColor] ( 57.28, 89.21) rectangle ( 76.28, 96.89);
+\path[fill=fillColor] ( 57.28, 89.21) rectangle ( 76.28, 95.46);
 \definecolor{fillColor}{RGB}{55,126,184}
 
-\path[fill=fillColor] ( 57.28, 96.89) rectangle ( 76.28, 98.08);
+\path[fill=fillColor] ( 57.28, 95.46) rectangle ( 76.28, 96.43);
 \definecolor{fillColor}{RGB}{77,175,74}
 
-\path[fill=fillColor] ( 57.28, 98.08) rectangle ( 76.28, 98.68);
+\path[fill=fillColor] ( 57.28, 96.43) rectangle ( 76.28, 96.92);
 \definecolor{fillColor}{RGB}{152,78,163}
 
-\path[fill=fillColor] ( 57.28, 98.68) rectangle ( 76.28, 99.71);
+\path[fill=fillColor] ( 57.28, 96.92) rectangle ( 76.28, 97.75);
 \definecolor{fillColor}{RGB}{255,127,0}
 
-\path[fill=fillColor] ( 57.28, 99.71) rectangle ( 76.28, 99.75);
+\path[fill=fillColor] ( 57.28, 97.75) rectangle ( 76.28, 97.79);
 \definecolor{fillColor}{RGB}{228,26,28}
 
-\path[fill=fillColor] ( 78.39, 89.21) rectangle ( 97.39,105.82);
+\path[fill=fillColor] ( 78.39, 89.21) rectangle ( 97.39,102.73);
 \definecolor{fillColor}{RGB}{55,126,184}
 
-\path[fill=fillColor] ( 78.39,105.82) rectangle ( 97.39,108.12);
+\path[fill=fillColor] ( 78.39,102.73) rectangle ( 97.39,104.60);
 \definecolor{fillColor}{RGB}{77,175,74}
 
-\path[fill=fillColor] ( 78.39,108.12) rectangle ( 97.39,109.60);
+\path[fill=fillColor] ( 78.39,104.60) rectangle ( 97.39,105.80);
 \definecolor{fillColor}{RGB}{152,78,163}
 
-\path[fill=fillColor] ( 78.39,109.60) rectangle ( 97.39,111.56);
+\path[fill=fillColor] ( 78.39,105.80) rectangle ( 97.39,107.40);
 \definecolor{fillColor}{RGB}{255,127,0}
 
-\path[fill=fillColor] ( 78.39,111.56) rectangle ( 97.39,111.63);
+\path[fill=fillColor] ( 78.39,107.40) rectangle ( 97.39,107.45);
 \definecolor{fillColor}{RGB}{228,26,28}
 
-\path[fill=fillColor] ( 99.50, 89.21) rectangle (118.50,114.74);
+\path[fill=fillColor] ( 99.50, 89.21) rectangle (118.50,109.98);
 \definecolor{fillColor}{RGB}{55,126,184}
 
-\path[fill=fillColor] ( 99.50,114.74) rectangle (118.50,117.98);
+\path[fill=fillColor] ( 99.50,109.98) rectangle (118.50,112.62);
 \definecolor{fillColor}{RGB}{77,175,74}
 
-\path[fill=fillColor] ( 99.50,117.98) rectangle (118.50,119.97);
+\path[fill=fillColor] ( 99.50,112.62) rectangle (118.50,114.24);
 \definecolor{fillColor}{RGB}{152,78,163}
 
-\path[fill=fillColor] ( 99.50,119.97) rectangle (118.50,122.75);
+\path[fill=fillColor] ( 99.50,114.24) rectangle (118.50,116.50);
 \definecolor{fillColor}{RGB}{255,127,0}
 
-\path[fill=fillColor] ( 99.50,122.75) rectangle (118.50,122.83);
+\path[fill=fillColor] ( 99.50,116.50) rectangle (118.50,116.57);
 \definecolor{fillColor}{RGB}{228,26,28}
 
-\path[fill=fillColor] (120.61, 89.21) rectangle (139.61,118.84);
+\path[fill=fillColor] (120.61, 89.21) rectangle (139.61,113.32);
 \definecolor{fillColor}{RGB}{77,175,74}
 
-\path[fill=fillColor] (120.61,118.84) rectangle (139.61,121.00);
+\path[fill=fillColor] (120.61,113.32) rectangle (139.61,115.08);
 \definecolor{fillColor}{RGB}{152,78,163}
 
-\path[fill=fillColor] (120.61,121.00) rectangle (139.61,124.20);
+\path[fill=fillColor] (120.61,115.08) rectangle (139.61,117.69);
 \definecolor{fillColor}{RGB}{255,127,0}
 
-\path[fill=fillColor] (120.61,124.20) rectangle (139.61,124.31);
+\path[fill=fillColor] (120.61,117.69) rectangle (139.61,117.77);
 
-\path[] (120.61,124.31) rectangle (139.61,128.96);
+\path[] (120.61,117.77) rectangle (139.61,121.56);
 \definecolor{fillColor}{RGB}{228,26,28}
 
-\path[fill=fillColor] (141.72, 89.21) rectangle (160.72,125.90);
+\path[fill=fillColor] (141.72, 89.21) rectangle (160.72,119.07);
 \definecolor{fillColor}{RGB}{55,126,184}
 
-\path[fill=fillColor] (141.72,125.90) rectangle (160.72,132.75);
+\path[fill=fillColor] (141.72,119.07) rectangle (160.72,124.64);
 \definecolor{fillColor}{RGB}{77,175,74}
 
-\path[fill=fillColor] (141.72,132.75) rectangle (160.72,135.27);
+\path[fill=fillColor] (141.72,124.64) rectangle (160.72,126.69);
 \definecolor{fillColor}{RGB}{152,78,163}
 
-\path[fill=fillColor] (141.72,135.27) rectangle (160.72,138.98);
+\path[fill=fillColor] (141.72,126.69) rectangle (160.72,129.71);
 \definecolor{fillColor}{RGB}{255,127,0}
 
-\path[fill=fillColor] (141.72,138.98) rectangle (160.72,139.16);
+\path[fill=fillColor] (141.72,129.71) rectangle (160.72,129.86);
 \definecolor{fillColor}{RGB}{228,26,28}
 
-\path[fill=fillColor] (162.83, 89.21) rectangle (181.82,125.18);
+\path[fill=fillColor] (162.83, 89.21) rectangle (181.82,118.48);
 \definecolor{fillColor}{RGB}{55,126,184}
 
-\path[fill=fillColor] (162.83,125.18) rectangle (181.82,132.59);
+\path[fill=fillColor] (162.83,118.48) rectangle (181.82,124.51);
 \definecolor{fillColor}{RGB}{77,175,74}
 
-\path[fill=fillColor] (162.83,132.59) rectangle (181.82,135.24);
+\path[fill=fillColor] (162.83,124.51) rectangle (181.82,126.67);
 \definecolor{fillColor}{RGB}{152,78,163}
 
-\path[fill=fillColor] (162.83,135.24) rectangle (181.82,139.04);
+\path[fill=fillColor] (162.83,126.67) rectangle (181.82,129.76);
 \definecolor{fillColor}{RGB}{255,127,0}
 
-\path[fill=fillColor] (162.83,139.04) rectangle (181.82,139.20);
+\path[fill=fillColor] (162.83,129.76) rectangle (181.82,129.89);
+\definecolor{fillColor}{RGB}{228,26,28}
+
+\path[fill=fillColor] (183.94, 89.21) rectangle (202.93,124.04);
+\definecolor{fillColor}{RGB}{55,126,184}
+
+\path[fill=fillColor] (183.94,124.04) rectangle (202.93,132.92);
+\definecolor{fillColor}{RGB}{77,175,74}
+
+\path[fill=fillColor] (183.94,132.92) rectangle (202.93,135.55);
+\definecolor{fillColor}{RGB}{152,78,163}
+
+\path[fill=fillColor] (183.94,135.55) rectangle (202.93,139.03);
+\definecolor{fillColor}{RGB}{255,127,0}
+
+\path[fill=fillColor] (183.94,139.03) rectangle (202.93,139.20);
 \end{scope}
 \begin{scope}
 \path[clip] ( 33.00, 23.29) rectangle (206.10, 78.28);
@@ -346,11 +364,11 @@
 
 \node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.72] at ( 25.89, 86.86) {0};
 
-\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.72] at ( 25.89,103.82) {500};
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.72] at ( 25.89,100.66) {500};
 
-\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.72] at ( 25.89,120.78) {1000};
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.72] at ( 25.89,114.46) {1000};
 
-\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.72] at ( 25.89,137.73) {1500};
+\node[text=drawColor,anchor=base east,inner sep=0pt, outer sep=0pt, scale=  0.72] at ( 25.89,128.26) {1500};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
@@ -359,14 +377,14 @@
 \path[draw=drawColor,line width= 0.6pt,line join=round] ( 28.74, 89.21) --
 	( 33.00, 89.21);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 28.74,106.16) --
-	( 33.00,106.16);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 28.74,103.01) --
+	( 33.00,103.01);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 28.74,123.12) --
-	( 33.00,123.12);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 28.74,116.81) --
+	( 33.00,116.81);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 28.74,140.08) --
-	( 33.00,140.08);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 28.74,130.61) --
+	( 33.00,130.61);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
