--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -100,6 +100,9 @@
 
 \newcommand{\SASAMPLE}{\mbox{\emph{SAS}}\xspace}
 \newcommand{\ISASAMPLE}{\mbox{\emph{ISAS}}\xspace}
+\newcommand{\dualCST}{\method{d-\CST}}
+\newcommand{\singleCST}{\method{s-\CST}}
+
 
 %%% Local Variables: 
 %%% mode: latex
