--- a/paper/sec-abstract.tex
+++ b/paper/sec-abstract.tex
@@ -1,4 +1,4 @@
-Efficient means for storing and querying langugage models are critical for scaling  to large text corpora and high Markov orders.
+Efficient means for storing and querying language models are critical for scaling  to large text corpora and high Markov orders.
 While most previous work has focussed on efficient means of indexing \ngrams using a fixed, low Markov order,
 in this paper we develop techniques that allow modelling of extremely large corpora without imposing a Markov condition.
 Our technique leverages succinct indexes in the form of compressed suffix trees which provide near optimal compression while still allowing efficient search.
