--- a/paper/sec-suffix.tex
+++ b/paper/sec-suffix.tex
@@ -41,6 +41,7 @@ of ancestors in the tree, whereas the {\it string depth} corresponds to the
 length of the path-label. Searching for a pattern {\pattern} of 
 size {\plen} in {\col} translates to finding the {\it locus} node $v$ closest to
 the root such that {\pattern} is a prefix of the path-label of $v$ in $\Order{\plen}$ time.
+We refer to this approach as {\it forward search}.
 Figure~\ref{fig-suffix-tree} shows a suffix tree over a sample text. 
 A suffix tree requires $\Order{\collen}$ space 
 and can be constructed in $\Order{\collen}$ time~\cite{u-algo95}. The children
@@ -82,7 +83,7 @@ bits of space where $H_k$ refers to the $k$-th order entropy of the text~\cite{f
 In practice, the FM-Index of $\col$ uses roughly space equivalent to
 the compressed representation of $\col$ using a standard compressor such as {\tt bzip2}.
 For a more comprehensive overview on succinct text indexes, we refer to the
-excellent survey of~\newcite{fgnv-jea08}.
+survey of~\newcite{fgnv-jea08}.
 
 The FM-Index relies on the duality between the suffix array and the BWT~\cite{bw-dec94}, 
 a permutation of the text such that $\colbwt[i] = \col[\SA[i]-1]$ (see Figure~\ref{fig-example}). Searching for
