--- a/paper/sec-intro.tex
+++ b/paper/sec-intro.tex
@@ -35,13 +35,13 @@ As always, there is a trade-off between accuracy, space, and time, with recent p
 \cite{Chazelle:2004:BFE:982792.982797,guthrie2010storing},
 or \emph{loss-less}  not-small LMs \cite{stolcke2011srilm} where compression and tries 
 \cite{Germann:2009:TPT:1621947.1621952,heafield2011kenlm,pauls2011faster}, 
-suffix trees \cite{kennington2012suffix}, and LODUS trees 
+suffix trees \cite{kennington2012suffix}, and LOUDS trees 
 \cite{sall11,DBLP:conf/acl/WatanabeTI09}  
 have been used to further reduce the storage.
 % Trevor: sentence needed on LREC paper -- the approach most similar to ours
 % Trevor: and also SRI/Ken
 However, none of these papers scale up to high-order  
-\ngram LMs on large corpora due to their  memory and time constrints when learning the models.
+\ngram LMs on large corpora due to their  memory and time constraints when learning the models.
 %
 %However, none of the state-of-the-art LM toolkits provides the opportunity of
 %investigating the behaviour of high-order LMs  
