--- a/paper/sec-lm.tex
+++ b/paper/sec-lm.tex
@@ -10,14 +10,14 @@ we focus on the Kneser-Ney LM~\cite{kneser1995improved},
 specifically the interpolated variant described in \newcite{chen1996empirical}, 
 which has been shown to outperform other \ngram LMs and has become the de-facto standard.
 
-Interpolated Kneser-Ney describes the conditional probability of a word $w_i$ conditioned on the context of $m-1$ preceeding words, $w_{i-m+1}^{i-1}$, as 
+Interpolated Kneser-Ney describes the conditional probability of a word $w_i$ conditioned on the context of $m-1$ preceding words, $w_{i-m+1}^{i-1}$, as 
 \begin{align}
 P(w_i |& w_{i-m+1}^{i-1})=\frac{\max\left[c(w^{i}_{i-m+1}) - D_m,0\right]}{c(w^{i-1}_{i-m+1})} \nonumber \\
 & \hspace{-6mm} +\frac{D_m \nlplus{w^{i-1}_{i-m-1}\Bigcdot} }{c(w^{i-1}_{i-m+1})}  
 \bar{P}(w_i | w_{i-m+2}^{i-1}) ,  
 \label{eq:high}
 \end{align}
-where lower-order smoothed probabilities are defined recuresively (for $1<k<m$) as 
+where lower-order smoothed probabilities are defined recursively (for $1<k<m$) as 
 \begin{align}
 \! \bar{P}(w_i |& w_{i-k+1}^{i-1})
  = \frac{\max\left[\nlplus{\Bigcdot w_{i-k+1}^{i}} - D_k,0\right]}{\nlplus{\Bigcdot w_{i-k+1}^{i-1} \Bigcdot}} \nonumber \\
