--- a/paper/sec-experiments.tex
+++ b/paper/sec-experiments.tex
@@ -40,7 +40,8 @@ Richer discounting techniques such as Modified Kneser-Ney \cite{chen1996empirica
 
 \begin{figure}[tb]
 \includegraphics[width=\columnwidth]{figures/german_pattern_size.pdf}
-\caption{Number of successful queries across different pattern sizes from KN computation over the German test set, with unbounded $m$.}
+\caption{Number of \ngrams of different sizes in both training and test sets for Europarl German}
+%\caption{Number of successful queries across different pattern sizes from KN computation over the German test set, with unbounded $m$.}
 \label{fig:germanpattern}
 \end{figure}
 
