--- a/paper/local.bib
+++ b/paper/local.bib
@@ -41,6 +41,14 @@
 @string{ swat = "Proc. SWAT"}
 @string{ fsttcs = "Proc. FSTTCS"}
 
+@inproceedings{DBLP:conf/acl/TalbotO07,
+  author    = {David Talbot and
+               Miles Osborne},
+  title     = {Randomised Language Modelling for Statistical Machine Translation},
+  booktitle = acl, 
+  year      = {2007}
+}
+
 @inproceedings{DBLP:conf/acl/WatanabeTI09,
   author    = {Taro Watanabe and
                Hajime Tsukada and
@@ -48,35 +56,23 @@
   title     = {A Succinct N-gram Language Model},
   booktitle = {Proc. ACL               Short Papers},
   pages     = {341--344},
-  year      = {2009},
-  url       = {http://www.aclweb.org/anthology/P09-2086},
-  timestamp = {Mon, 25 Mar 2013 23:10:00 +0100},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/acl/WatanabeTI09},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  year      = {2009}
 }
 
 @inproceedings{sall11,
 title = {Unary Data Structures for Language Models},
 author  = {Jeffrey Sorensen and Cyril Allauzen},
 year  = 2011,
-booktitle = {Interspeech 2011},
+booktitle = interspeech,
 pages = {1425-1428}
 }
 
 @inproceedings{Germann:2009:TPT:1621947.1621952,
  author = {Germann, Ulrich and Joanis, Eric and Larkin, Samuel},
  title = {Tightly Packed Tries: How to Fit Large Models into Memory, and Make Them Load Fast, Too},
- booktitle = {Proceedings of the Workshop on Software Engineering, Testing, and Quality Assurance for Natural Language Processing},
- series = {SETQA-NLP '09},
+ booktitle = {Proc. of the Workshop on Software Engineering, Testing, and Quality Assurance for Natural Language Processing},
  year = {2009},
- isbn = {978-1-932432-32-9},
- location = {Boulder, Colorado},
- pages = {31--39},
- numpages = {9},
- url = {http://dl.acm.org/citation.cfm?id=1621947.1621952},
- acmid = {1621952},
- publisher = {Association for Computational Linguistics},
- address = {Stroudsburg, PA, USA},
+ pages = {31--39}
 } 
 
 
@@ -84,16 +80,9 @@ pages = {1425-1428}
  author = {Chazelle, Bernard and Kilian, Joe and Rubinfeld, Ronitt and Tal, Ayellet},
  title = {The Bloomier Filter: An Efficient Data Structure for Static Support Lookup Tables},
  booktitle = {Proceedings of the Fifteenth Annual ACM-SIAM Symposium on Discrete Algorithms},
- series = {SODA '04},
+ series = soda,
  year = {2004},
- isbn = {0-89871-558-X},
- location = {New Orleans, Louisiana},
- pages = {30--39},
- numpages = {10},
- url = {http://dl.acm.org/citation.cfm?id=982792.982797},
- acmid = {982797},
- publisher = {Society for Industrial and Applied Mathematics},
- address = {Philadelphia, PA, USA},
+ pages = {30--39}
 } 
 
 @article{Bengio:2003:NPL,
@@ -104,12 +93,7 @@ pages = {1425-1428}
  volume = {3},
  month = mar,
  year = {2003},
- issn = {1532-4435},
- pages = {1137--1155},
- numpages = {19},
- url = {http://dl.acm.org/citation.cfm?id=944919.944966},
- acmid = {944966},
- publisher = {JMLR.org},
+ pages = {1137--1155}
 } 
 
 @inproceedings{DBLP:conf/interspeech/MikolovKBCK10,
@@ -119,16 +103,9 @@ pages = {1425-1428}
                Jan Cernock{\'{y}} and
                Sanjeev Khudanpur},
   title     = {Recurrent neural network based language model},
-  booktitle = {{INTERSPEECH} 2010, 11th Annual Conference of the International Speech
-               Communication Association, Makuhari, Chiba, Japan, September 26-30,
-               2010},
+  booktitle = interspeech,
   pages     = {1045--1048},
-  year      = {2010},
-  crossref  = {DBLP:conf/interspeech/2010},
-  url       = {http://www.isca-speech.org/archive/interspeech_2010/i10_1045.html},
-  timestamp = {Thu, 09 Apr 2015 14:27:21 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/interspeech/MikolovKBCK10},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
+  year      = {2010}
 }
 @book{rab93book,
 author = {Lawrence Rabiner and Biing-Hwang Juang},
