excluded space-time table, added word types

--- a/paper/supplementary.tex
+++ b/paper/supplementary.tex
@@ -201,24 +201,26 @@ $\intervalsymbols{a}{l}{r}$ & finds the set of symbols $P(\alpha)$ preceeding pa
 \caption{Summary of \CSA and \CST functions used and their time complexity of inference. The above assumes that $n$ or (equivalently) $[l, r]$ matches $\alpha$ in the \CSA $a$ and/or \CST $t$.}
 \end{table*}
 
+
 \begin{table}
 \centering{
-\begin{tabular}{ll|cc|c}
-Language&&Size (MB)&Tokens (M)& Sentences (K)\\
+\begin{tabular}{ll|ccc|c}
+Language&&Size (MB)&Tokens (M)& Token Types& Sentences (K)\\
 \toprule
-Bulgarian&BG&36.11&8.53&329\\
-Czech&CS&53.48&12.25&535\\
-German&DE&171.80&44.07&1785 \\
-English&EN&179.15&49.32&1815\\
-Finnish&FI&145.32&32.85&1737\\
-French&FR&197.68&53.82&1792\\
-Hungarian&HU&52.53&12.02&527\\
-Italian&IT&186.67&48.08&1703\\
-Portuguese&PT&187.20&49.03&1737\\
+Bulgarian&BG&36.11&8.53&114930&329\\
+Czech&CS&53.48&12.25&174592&535\\
+German&DE&171.80&44.07&399354&1785 \\
+English&EN&179.15&49.32&124233&1815\\
+Finnish&FI&145.32&32.85&721389&1737\\
+French&FR&197.68&53.82&147058&1792\\
+Hungarian&HU&52.53&12.02&318882&527\\
+Italian&IT&186.67&48.08&178259&1703\\
+Portuguese&PT&187.20&49.03&183633&1737\\
 \end{tabular}}
 \caption{Tokens and sentence counts refer to the training partition. }\label{fig:data}
 \end{table}
 
+\iffalse
 \begin{table*}\tiny
 \centering
 \begin{tabular}{llllll|llll||llll|llll||l}
@@ -260,11 +262,11 @@ Portuguese&PT&187.20&49.03&1737\\
  & n=10 &&&&&&&&&402.01&&1206.04&3413&313.1&4499.58&939.34&849.23&314.03\\
  & n=$\infty$ &&&&&&&&&402.01&&1206.04&3413&313.1&4616.33&939.34&849.23&314.22\\\hline
   \multirow{3}{*}{FR} 
- & n=2 &51.2345&1.445&134.724&46.177&30.3573&1.849&82.2518&77.219&545.31&44.78&1635.96&227.98&409.03&589.61&1227.13&146.55&89.95\\
- & n=3 &360.534&7.573&587.402&186.42&228.099&11.18&385.87&279.465&545.31&15180&1635.96&227.98&409.03&3832.33&1227.13&146.55&54.84\\
- & n=5 &2727.57&84.835&2537.06&1308.478&2054.06&54.643&2028.54&1425.704&545.31&16120&1635.96&227.98&409.03&3895.4&1227.13&146.55&48.16\\
- & n=10 &&&&&&&&&545.31&&1635.96&227.98&409.03&3983.98&1227.13&146.55&47.88\\
- & n=$\infty$ &&&&&&&&&545.31&&1635.96&227.98&409.03&4233.02&1227.13&146.55&47.91\\\hline
+ & n=2 &51.2345&1.445&134.724&46.177&30.3573&1.849&82.2518&77.219&545.31&44.78&1635.96&227.98&409.03&589.61&1227.13&1005.79&89.95\\
+ & n=3 &360.534&7.573&587.402&186.42&228.099&11.18&385.87&279.465&545.31&15180&1635.96&227.98&409.03&3832.33&1227.13&1005.79&54.84\\
+ & n=5 &2727.57&84.835&2537.06&1308.478&2054.06&54.643&2028.54&1425.704&545.31&16120&1635.96&227.98&409.03&3895.4&1227.13&1005.79&48.16\\
+ & n=10 &&&&&&&&&545.31&&1635.96&227.98&409.03&3983.98&1227.13&1005.79&47.88\\
+ & n=$\infty$ &&&&&&&&&545.31&&1635.96&227.98&409.03&4233.02&1227.13&1005.79&47.91\\\hline
   \multirow{3}{*}{HU} 
  & n=2 &65.1734&2.071&157.863&46.87&40.6251&2.437&102.55&51.328&140.49&24.88&421.47&77.92&110.21&707.68&330.66&56.49&251.49\\
  & n=3 &304.252&6.884&388.353&141.252&204.766&7.038&280.492&165.791&140.49&17432&421.47&77.92&110.21&3042.19&330.66&56.49&189.56\\
@@ -286,4 +288,5 @@ Portuguese&PT&187.20&49.03&1737\\
 \end{tabular}
 \caption{Time-Space comparison of construction and query time for different \CST and \SRILM methods.}
 \end{table*}
+\fi
 \end{document}
