added absolute perplexities to figures/fig-europarl-pplx-ngram.R

--- a/paper/figures/fig-europarl-pplx-ngram.tex
+++ b/paper/figures/fig-europarl-pplx-ngram.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.8.1 on 2015-05-29 13:35:14
+% Created by tikzDevice version 0.8.1 on 2015-05-31 13:53:07
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor{fillColor}{RGB}{255,255,255}
@@ -619,168 +619,174 @@
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.84] at (  6.07, 82.49) {Perplexity [Relative to $\infty$-gram]};
+\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  0.84] at (  6.07, 82.49) {Perplexity [Relative to $\infty$]};
+\end{scope}
+\begin{scope}
+\path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
+\definecolor{drawColor}{RGB}{0,0,0}
+
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at ( 87.76,131.73) {Language ($2$-gram pplx, $\infty$-gram pplx)};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{RGB}{228,26,28}
 
-\path[draw=drawColor,line width= 1.1pt,line join=round] (122.26,132.24) -- (133.64,132.24);
+\path[draw=drawColor,line width= 1.1pt,line join=round] ( 89.32,124.56) -- (101.84,124.56);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{fillColor}{RGB}{228,26,28}
 
-\path[fill=fillColor] (127.95,132.24) circle (  1.07);
+\path[fill=fillColor] ( 95.58,124.56) circle (  1.07);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{RGB}{55,126,184}
 
-\path[draw=drawColor,line width= 1.1pt,dash pattern=on 2pt off 2pt ,line join=round] (122.26,118.01) -- (133.64,118.01);
+\path[draw=drawColor,line width= 1.1pt,dash pattern=on 2pt off 2pt ,line join=round] ( 89.32,117.44) -- (101.84,117.44);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{fillColor}{RGB}{55,126,184}
 
-\path[fill=fillColor] (127.95,118.01) circle (  1.07);
+\path[fill=fillColor] ( 95.58,117.44) circle (  1.07);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{RGB}{77,175,74}
 
-\path[draw=drawColor,line width= 1.1pt,dash pattern=on 4pt off 2pt ,line join=round] (122.26,103.79) -- (133.64,103.79);
+\path[draw=drawColor,line width= 1.1pt,dash pattern=on 4pt off 2pt ,line join=round] ( 89.32,110.33) -- (101.84,110.33);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{fillColor}{RGB}{77,175,74}
 
-\path[fill=fillColor] (127.95,103.79) circle (  1.07);
+\path[fill=fillColor] ( 95.58,110.33) circle (  1.07);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{RGB}{152,78,163}
 
-\path[draw=drawColor,line width= 1.1pt,dash pattern=on 4pt off 4pt ,line join=round] (151.77,132.24) -- (163.15,132.24);
+\path[draw=drawColor,line width= 1.1pt,dash pattern=on 4pt off 4pt ,line join=round] ( 89.32,103.22) -- (101.84,103.22);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{fillColor}{RGB}{152,78,163}
 
-\path[fill=fillColor] (157.46,132.24) circle (  1.07);
+\path[fill=fillColor] ( 95.58,103.22) circle (  1.07);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{RGB}{255,127,0}
 
-\path[draw=drawColor,line width= 1.1pt,dash pattern=on 1pt off 3pt ,line join=round] (151.77,118.01) -- (163.15,118.01);
+\path[draw=drawColor,line width= 1.1pt,dash pattern=on 1pt off 3pt ,line join=round] ( 89.32, 96.10) -- (101.84, 96.10);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{fillColor}{RGB}{255,127,0}
 
-\path[fill=fillColor] (157.46,118.01) circle (  1.07);
+\path[fill=fillColor] ( 95.58, 96.10) circle (  1.07);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{RGB}{255,255,51}
 
-\path[draw=drawColor,line width= 1.1pt,dash pattern=on 1pt off 3pt on 4pt off 3pt ,line join=round] (151.77,103.79) -- (163.15,103.79);
+\path[draw=drawColor,line width= 1.1pt,dash pattern=on 1pt off 3pt on 4pt off 3pt ,line join=round] ( 89.32, 88.99) -- (101.84, 88.99);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{fillColor}{RGB}{255,255,51}
 
-\path[fill=fillColor] (157.46,103.79) circle (  1.07);
+\path[fill=fillColor] ( 95.58, 88.99) circle (  1.07);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{RGB}{166,86,40}
 
-\path[draw=drawColor,line width= 1.1pt,dash pattern=on 7pt off 3pt ,line join=round] (180.81,132.24) -- (192.19,132.24);
+\path[draw=drawColor,line width= 1.1pt,dash pattern=on 7pt off 3pt ,line join=round] ( 89.32, 81.88) -- (101.84, 81.88);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{fillColor}{RGB}{166,86,40}
 
-\path[fill=fillColor] (186.50,132.24) circle (  1.07);
+\path[fill=fillColor] ( 95.58, 81.88) circle (  1.07);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{RGB}{247,129,191}
 
-\path[draw=drawColor,line width= 1.1pt,dash pattern=on 2pt off 2pt on 6pt off 2pt ,line join=round] (180.81,118.01) -- (192.19,118.01);
+\path[draw=drawColor,line width= 1.1pt,dash pattern=on 2pt off 2pt on 6pt off 2pt ,line join=round] ( 89.32, 74.76) -- (101.84, 74.76);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{fillColor}{RGB}{247,129,191}
 
-\path[fill=fillColor] (186.50,118.01) circle (  1.07);
+\path[fill=fillColor] ( 95.58, 74.76) circle (  1.07);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{gray}{0.60}
 
-\path[draw=drawColor,line width= 1.1pt,dash pattern=on 1pt off 2pt on 2pt off 2pt on 3pt off 2pt on 4pt off 2pt ,line join=round] (180.81,103.79) -- (192.19,103.79);
+\path[draw=drawColor,line width= 1.1pt,dash pattern=on 1pt off 2pt on 2pt off 2pt on 3pt off 2pt on 4pt off 2pt ,line join=round] ( 89.32, 67.65) -- (101.84, 67.65);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{fillColor}{gray}{0.60}
 
-\path[fill=fillColor] (186.50,103.79) circle (  1.07);
+\path[fill=fillColor] ( 95.58, 67.65) circle (  1.07);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.84] at (136.87,129.51) {BG};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.60] at (105.22,122.60) {BG ($2$-gram $117.39$, $\infty$-gram $73.01$)};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.84] at (136.87,115.28) {CZ};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.60] at (105.22,115.49) {CZ ($2$-gram $232.36$, $\infty$-gram $161.15$)};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.84] at (136.87,101.05) {DE};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.60] at (105.22,108.38) {DE ($2$-gram $178.11$, $\infty$-gram $108.27$)};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.84] at (166.38,129.51) {EN};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.60] at (105.22,101.26) {EN ($2$-gram $67.14$, $\infty$-gram $59.92$)};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.84] at (166.38,115.28) {FI};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.60] at (105.22, 94.15) {FI ($2$-gram $446.29$, $\infty 314.22$)};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.84] at (166.38,101.05) {FR};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.60] at (105.22, 87.04) {FR ($2$-gram $89.95$, $\infty$-gram $47.91$)};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.84] at (195.42,129.51) {HU};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.60] at (105.22, 79.92) {HU ($2$-gram $251.49$, $\infty$-gram $182.18$)};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.84] at (195.42,115.28) {IT};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.60] at (105.22, 72.81) {IT ($2$-gram $132.26$, $\infty$-gram $77.80$)};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (216.81,144.54);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.84] at (195.42,101.05) {PT};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.60] at (105.22, 65.70) {PT ($2$-gram $121.42$, $\infty$-gram $68.58$)};
 \end{scope}
 \end{tikzpicture}
